Fixed #4003 - Drop area is too small - fixed title + placeholder

--- a/packages/survey-creator-core/src/components/tabs/designer.scss
+++ b/packages/survey-creator-core/src/components/tabs/designer.scss
@@ -16,6 +16,7 @@ svc-tab-designer {
 .svc-tab-designer--with-place-holder .svc-tab-designer_content {
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .svc-tab-designer--with-place-holder .svc-designer-header {
@@ -65,6 +66,7 @@ svc-tab-designer {
 
 .svc-designer__placeholder-container {
   display: flex;
+  flex-grow: 1;
   width: 100%;
   flex-direction: column;
   align-items: center;
